<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_boas_vindas"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/edit_text_username" />


    <EditText
        android:id="@+id/edit_text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_user"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_pass"
        android:layout_centerHorizontal="true"
        android:width="210dp"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_login"
        android:text="@string/registerLink"
        android:textSize="16sp"
        android:textColor="@color/azulLink"/>


</RelativeLayout>